--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,9 @@ jobs:
       - name: Install dependencies
         run: mix deps.get
 
+      - name: Compile dependencies
+        run: mix deps.compile
+
       - name: Compile
         run: mix compile --warnings-as-errors
 
@@ -102,6 +105,9 @@ jobs:
 
       - name: Install dependencies
         run: mix deps.get
+
+      - name: Compile dependencies
+        run: mix deps.compile
 
       - name: Compile
         run: mix compile
